templates/loki/templates/network_policy.yaml
#@ load("@ytt:data", "data")
#@ load("@ytt:overlay", "overlay")
#@ load("_ytt.lib.yaml", "labels")

#@ if data.values.loki.enable_network_policy:
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: loki
  namespace: loki
  labels: #@ labels()
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: loki
      app.kubernetes.io/instance: loki
      app.kubernetes.io/component: single-binary
  ingress:
  - from: #! allow access for vector
    - namespaceSelector:
        matchLabels:
          namespace.kubernetes.io/name: vector
      podSelector: {}
    ports:
    - port: 3100
  - from: #! allow access for prometheus
    - namespaceSelector:
        matchLabels:
          namespace.kubernetes.io/name: prometheus
      podSelector: {}
    ports:
    - port: 3100
  - from: #! allow access for grafana
    - namespaceSelector:
        matchLabels:
          namespace.kubernetes.io/name: grafana
      podSelector: {}
    ports:
    - port: 3100
#@ end
